[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Base/WebBrowser/WebBrowser.gd" id="1_dfpua"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsl1o"]
bg_color = Color(0.800491, 0.800491, 0.800491, 1)

[node name="WebBrowser" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_dfpua")
backend = 1

[node name="GDCef" type="GDCef" parent="."]
unique_name_in_owner = true

[node name="UI" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2

[node name="GoBack" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
tooltip_text = "BUTTON_GO_BACK_TOOLTIP"
text = "BUTTON_GO_BACK"

[node name="GoNext" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
tooltip_text = "BUTTON_GO_NEXT_TOOLTIP"
text = "BUTTON_GO_NEXT"

[node name="URL" type="LineEdit" parent="UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="URL_Status" type="Button" parent="UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "BUTTON_ENTER_TOOLTIP"
text = "BUTTON_ENTER"

[node name="Reload" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
tooltip_text = "BUTTON_REFRESH_TOOLTIP"
text = "BUTTON_REFRESH"

[node name="Stop" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
tooltip_text = "BUTTON_STOP_TOOLTIP"
text = "BUTTON_STOP"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bsl1o")

[node name="WebView" type="WebView" parent="PanelContainer"]
full_window_size = false
url = "res://addons/godot_wry/examples/test.html"
unique_name_in_owner = true
layout_mode = 2

[node name="DisplayTexture" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
expand_mode = 1
stretch_mode = 3

[connection signal="pressed" from="UI/HBoxContainer/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/GoNext" to="." method="_on_go_next_pressed"]
[connection signal="text_changed" from="UI/HBoxContainer/URL" to="." method="_on_url_text_changed"]
[connection signal="text_submitted" from="UI/HBoxContainer/URL" to="." method="open_url"]
[connection signal="pressed" from="UI/HBoxContainer/URL_Status" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
